New commandline in README.txt documented.